// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Size related props 1`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__simple\\">
    <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-130\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-130\\"></label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div><span> / 6 <div class=\\"var-pagination__simple-line\\"></div></span>
  </li>
  <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__size\\">
    <div class=\\"var-menu\\">
      <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>20条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`Size related props 2`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__simple\\">
    <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-130\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-130\\"></label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div><span> / 6 <div class=\\"var-pagination__simple-line\\"></div></span>
  </li>
  <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode disabled prop 1`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__item var-pagination__next var-pagination__item--disabled var-elevation--2\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__size var-pagination__item--disabled\\">
    <div class=\\"var-menu\\">
      <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode mount 1`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li item-mode=\\"basic\\" class=\\"var-pagination__item var-elevation--2 var-pagination__item--active\\">1</li>
  <li item-mode=\\"head\\" class=\\"var-pagination__item var-elevation--2 var-pagination__item--hide\\">...</li>
  <li item-mode=\\"basic\\" class=\\"var-pagination__item var-elevation--2\\">2</li>
  <li item-mode=\\"basic\\" class=\\"var-pagination__item var-elevation--2\\">3</li>
  <li item-mode=\\"basic\\" class=\\"var-pagination__item var-elevation--2\\">4</li>
  <li item-mode=\\"tail\\" class=\\"var-pagination__item var-elevation--2\\">...</li>
  <li item-mode=\\"basic\\" class=\\"var-pagination__item var-elevation--2\\">13</li>
  <li class=\\"var-pagination__item var-pagination__next var-elevation--2\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__size\\">
    <div class=\\"var-menu\\">
      <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <li class=\\"var-pagination__quickly\\">前往 <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-90\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-90\\"></label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </li>
  <li class=\\"var-pagination__total\\">1-10 of 123 items</li>
</ul>"
`;

exports[`simple mode disabled prop 1`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__simple var-pagination__item--disabled\\">
    <div class=\\"var-input var--box var-input--disabled\\" var-pagination-cover=\\"\\">
      <div class=\\"var-input__controller var-input--disabled\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-68\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--disabled var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-68\\"></label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line var-input--line-disabled\\">
        <div class=\\"var-input__dot var-input--line-disabled\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div><span> / 0 <div class=\\"var-pagination__simple-line\\"></div></span>
  </li>
  <li class=\\"var-pagination__item var-pagination__next var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__size var-pagination__item--disabled\\">
    <div class=\\"var-menu\\">
      <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`simple mode mount 1`] = `
"<ul class=\\"var-pagination\\">
  <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__simple\\">
    <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
      <div class=\\"var-input__controller\\">
        <div class=\\"var-input__icon\\"></div>
        <div class=\\"var-input__wrap\\">
          <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-54\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-54\\"></label>
        </div>
        <div class=\\"var-input__icon\\">
          <!--v-if-->
        </div>
      </div>
      <div class=\\"var-input__line\\">
        <div class=\\"var-input__dot\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div><span> / 13 <div class=\\"var-pagination__simple-line\\"></div></span>
  </li>
  <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
  <li class=\\"var-pagination__size\\">
    <div class=\\"var-menu\\">
      <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <li class=\\"var-pagination__total\\">1-10 of 123 items</li>
</ul>"
`;

exports[`test pagination example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<div class=\\"transformer\\">
  <ul class=\\"var-pagination\\">
    <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__simple\\">
      <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
        <div class=\\"var-input__controller\\">
          <div class=\\"var-input__icon\\"></div>
          <div class=\\"var-input__wrap\\">
            <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-5\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-5\\"></label>
          </div>
          <div class=\\"var-input__icon\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"var-input__line\\">
          <div class=\\"var-input__dot\\"></div>
        </div>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div><span> / 12 <div class=\\"var-pagination__simple-line\\"></div></span>
    </li>
    <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__size\\">
      <div class=\\"var-menu\\">
        <div class=\\"var-pagination__size--open\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>
<div class=\\"app-type\\">隐藏 size 切换器</div>
<div class=\\"transformer\\">
  <ul class=\\"var-pagination\\">
    <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__simple\\">
      <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
        <div class=\\"var-input__controller\\">
          <div class=\\"var-input__icon\\"></div>
          <div class=\\"var-input__wrap\\">
            <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-19\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-19\\"></label>
          </div>
          <div class=\\"var-input__icon\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"var-input__line\\">
          <div class=\\"var-input__dot\\"></div>
        </div>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div><span> / 12 <div class=\\"var-pagination__simple-line\\"></div></span>
    </li>
    <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>
<div class=\\"app-type\\">显示总数</div>
<div class=\\"transformer\\">
  <ul class=\\"var-pagination\\">
    <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__simple\\">
      <div class=\\"var-input var--box\\" var-pagination-cover=\\"\\">
        <div class=\\"var-input__controller\\">
          <div class=\\"var-input__icon\\"></div>
          <div class=\\"var-input__wrap\\">
            <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-26\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-26\\"></label>
          </div>
          <div class=\\"var-input__icon\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"var-input__line\\">
          <div class=\\"var-input__dot\\"></div>
        </div>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div><span> / 12 <div class=\\"var-pagination__simple-line\\"></div></span>
    </li>
    <li class=\\"var-pagination__item var-pagination__next var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__size\\">
      <div class=\\"var-menu\\">
        <div class=\\"var-pagination__size--open\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <li class=\\"var-pagination__total\\">共 120 条</li>
  </ul>
</div>
<div class=\\"app-type\\">禁用</div>
<div class=\\"transformer\\">
  <ul class=\\"var-pagination\\">
    <li class=\\"var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__simple var-pagination__item--disabled\\">
      <div class=\\"var-input var--box var-input--disabled\\" var-pagination-cover=\\"\\">
        <div class=\\"var-input__controller var-input--disabled\\">
          <div class=\\"var-input__icon\\"></div>
          <div class=\\"var-input__wrap\\">
            <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-40\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--disabled var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-40\\"></label>
          </div>
          <div class=\\"var-input__icon\\">
            <!--v-if-->
          </div>
        </div>
        <div class=\\"var-input__line var-input--line-disabled\\">
          <div class=\\"var-input__dot var-input--line-disabled\\"></div>
        </div>
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div><span> / 12 <div class=\\"var-pagination__simple-line\\"></div></span>
    </li>
    <li class=\\"var-pagination__item var-pagination__next var-pagination__item--disabled var-pagination__item--simple\\"><i class=\\"var-icon var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: transform 0ms;\\"></i></li>
    <li class=\\"var-pagination__size var-pagination__item--disabled\\">
      <div class=\\"var-menu\\">
        <div class=\\"var-pagination__size--open var-pagination__size--open--disabled\\"><span>10条 / 页</span><i class=\\"var-icon var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon\\" style=\\"transition: transform 0ms;\\" var-pagination-cover=\\"\\"></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>"
`;
